# simple_slam

./: CMakeLists.txt  README.md  build-comp.sh
examples/: CMakeLists.txt  run_vo.cpp  vis_data.cpp
simple_slam/: CMakeLists.txt  data_loader.cpp  data_loader.hpp  visual_odometry.cpp  visual_odometry.hpp  visualiser.cpp  visualiser.hpp
test/: CMakeLists.txt  data_loader_test.cpp
